// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Table[Base] should render correctly  1`] = `
<div>
  <div
    class="c-l8p00w cv4tmwp c-m2vrg2"
  >
    <div
      class="c-67knhe"
    >
      <table>
        <colgroup>
          <col
            style="width: 0px;"
          />
          <col
            style="width: 0px;"
          />
          <col
            style="width: 0px;"
          />
          <col
            style="width: 0px;"
          />
        </colgroup>
        <thead>
          <tr>
            <th
              class=""
              rowspan="1"
            >
              <div
                class=""
              >
                <span>
                  Name
                </span>
              </div>
            </th>
            <th
              class=""
              rowspan="1"
            >
              <div
                class=""
              >
                <span>
                  Country
                </span>
              </div>
            </th>
            <th
              class=""
              rowspan="1"
            >
              <div
                class=""
              >
                <span>
                  Position
                </span>
              </div>
            </th>
            <th
              class="c-pw17pp"
              rowspan="1"
            >
              <div
                class=""
              >
                <span>
                  Office
                </span>
              </div>
            </th>
          </tr>
        </thead>
        <tbody>
          <tr
            class=""
          >
            <td
              class=""
              colspan="1"
            >
              Ephraim Wisozk
            </td>
            <td
              class=""
              colspan="1"
            >
              Reunion
            </td>
            <td
              class=""
              colspan="1"
            >
              Marketing Designer
            </td>
            <td
              class="c-pw17pp"
              colspan="1"
            >
              Miami
            </td>
          </tr>
          <tr
            class=""
          >
            <td
              class=""
              colspan="1"
            >
              Osvaldo Beer
            </td>
            <td
              class=""
              colspan="1"
            >
              Syrian Arab Republic
            </td>
            <td
              class=""
              colspan="1"
            >
              Financial Controller
            </td>
            <td
              class="c-pw17pp"
              colspan="1"
            >
              San Paulo
            </td>
          </tr>
          <tr
            class=""
          >
            <td
              class=""
              colspan="1"
            >
              Dylan Ratke
            </td>
            <td
              class=""
              colspan="1"
            >
              Peru
            </td>
            <td
              class=""
              colspan="1"
            >
              Development Lead
            </td>
            <td
              class="c-pw17pp"
              colspan="1"
            >
              Boston
            </td>
          </tr>
          <tr
            class=""
          >
            <td
              class=""
              colspan="1"
            >
              Shaniya Jacobs
            </td>
            <td
              class=""
              colspan="1"
            >
              Peru
            </td>
            <td
              class=""
              colspan="1"
            >
              Developer
            </td>
            <td
              class="c-pw17pp"
              colspan="1"
            >
              Chengdu
            </td>
          </tr>
        </tbody>
        <tfoot>
          <tr />
        </tfoot>
      </table>
    </div>
  </div>
</div>
`;

exports[`Table[Base] should render correctly about border 1`] = `
<div>
  <div
    class="c-l8p00w c-ldtk0y cv4tmwp c-m2vrg2"
  >
    <div
      class="c-67knhe"
    >
      <table>
        <colgroup>
          <col
            style="width: 0px;"
          />
          <col
            style="width: 0px;"
          />
          <col
            style="width: 0px;"
          />
          <col
            style="width: 0px;"
          />
        </colgroup>
        <thead>
          <tr>
            <th
              class=""
              rowspan="1"
            >
              <div
                class=""
              >
                <span>
                  Name
                </span>
              </div>
            </th>
            <th
              class=""
              rowspan="1"
            >
              <div
                class=""
              >
                <span>
                  Country
                </span>
              </div>
            </th>
            <th
              class=""
              rowspan="1"
            >
              <div
                class=""
              >
                <span>
                  Position
                </span>
              </div>
            </th>
            <th
              class="c-pw17pp"
              rowspan="1"
            >
              <div
                class=""
              >
                <span>
                  Office
                </span>
              </div>
            </th>
          </tr>
        </thead>
        <tbody>
          <tr
            class=""
          >
            <td
              class=""
              colspan="1"
            >
              Ephraim Wisozk
            </td>
            <td
              class=""
              colspan="1"
            >
              Reunion
            </td>
            <td
              class=""
              colspan="1"
            >
              Marketing Designer
            </td>
            <td
              class="c-pw17pp"
              colspan="1"
            >
              Miami
            </td>
          </tr>
          <tr
            class="c-u92ca8"
          >
            <td
              class=""
              colspan="1"
            >
              Osvaldo Beer
            </td>
            <td
              class=""
              colspan="1"
            >
              Syrian Arab Republic
            </td>
            <td
              class=""
              colspan="1"
            >
              Financial Controller
            </td>
            <td
              class="c-pw17pp"
              colspan="1"
            >
              San Paulo
            </td>
          </tr>
          <tr
            class=""
          >
            <td
              class=""
              colspan="1"
            >
              Dylan Ratke
            </td>
            <td
              class=""
              colspan="1"
            >
              Peru
            </td>
            <td
              class=""
              colspan="1"
            >
              Development Lead
            </td>
            <td
              class="c-pw17pp"
              colspan="1"
            >
              Boston
            </td>
          </tr>
          <tr
            class="c-u92ca8"
          >
            <td
              class=""
              colspan="1"
            >
              Shaniya Jacobs
            </td>
            <td
              class=""
              colspan="1"
            >
              Peru
            </td>
            <td
              class=""
              colspan="1"
            >
              Developer
            </td>
            <td
              class="c-pw17pp"
              colspan="1"
            >
              Chengdu
            </td>
          </tr>
        </tbody>
        <tfoot>
          <tr />
        </tfoot>
      </table>
    </div>
  </div>
</div>
`;

exports[`Table[Base] should render correctly about group 1`] = `
<div
  class="c-l8p00w c-ldtk0y cv4tmwp c-m2vrg2"
>
  <div
    class="c-67knhe"
  >
    <table>
      <colgroup>
        <col
          style="width: 0px;"
        />
        <col
          style="width: 0px;"
        />
        <col
          style="width: 0px;"
        />
        <col
          style="width: 0px;"
        />
        <col
          style="width: 0px;"
        />
        <col
          style="width: 0px;"
        />
      </colgroup>
      <thead>
        <tr>
          <th
            class="c-aminq"
            colspan="3"
            style="padding: 0px;"
          >
            <div>
              <span
                style="background: rgb(232, 235, 240); display: block; line-height: 40px; color: rgb(20, 23, 55);"
              >
                Name
              </span>
            </div>
          </th>
          <th
            class=""
            rowspan="3"
          >
            <div
              class=""
            >
              <span>
                Country
              </span>
            </div>
          </th>
          <th
            class="c-pw17pp c-aminq"
            colspan="2"
            style="padding: 0px;"
          >
            <div>
              <span>
                Other
              </span>
            </div>
          </th>
        </tr>
        <tr>
          <th
            class="c-aminq"
            colspan="2"
          >
            <div>
              True Name
            </div>
          </th>
          <th
            class=""
            rowspan="2"
          >
            <div
              class=""
            >
              <span>
                Nick Name
              </span>
            </div>
          </th>
          <th
            class=""
            rowspan="2"
          >
            <div
              class=""
            >
              <span>
                Office
              </span>
            </div>
          </th>
          <th
            class="c-pw17pp"
            rowspan="2"
          >
            <div
              class=""
            >
              <span>
                Position
              </span>
            </div>
          </th>
        </tr>
        <tr>
          <th
            class=""
            rowspan="1"
          >
            <div
              class=""
            >
              <span>
                First Name
              </span>
            </div>
          </th>
          <th
            class=""
            rowspan="1"
          >
            <div
              class=""
            >
              <span>
                Last Name
              </span>
            </div>
          </th>
        </tr>
      </thead>
      <tbody>
        <tr
          class=""
        >
          <td
            class=""
            colspan="1"
          >
            Ephraim
          </td>
          <td
            class=""
            colspan="1"
          >
            Wisozk
          </td>
          <td
            class=""
            colspan="1"
          >
            nickname
          </td>
          <td
            class=""
            colspan="1"
          >
            Reunion
          </td>
          <td
            class=""
            colspan="1"
          >
            Miami
          </td>
          <td
            class="c-pw17pp"
            colspan="1"
          >
            Marketing Designer
          </td>
        </tr>
        <tr
          class=""
        >
          <td
            class=""
            colspan="1"
          >
            Osvaldo
          </td>
          <td
            class=""
            colspan="1"
          >
            Beer
          </td>
          <td
            class=""
            colspan="1"
          >
            nickname
          </td>
          <td
            class=""
            colspan="1"
          >
            Syrian Arab Republic
          </td>
          <td
            class=""
            colspan="1"
          >
            San Paulo
          </td>
          <td
            class="c-pw17pp"
            colspan="1"
          >
            Financial Controller
          </td>
        </tr>
        <tr
          class=""
        >
          <td
            class=""
            colspan="1"
          >
            Dylan
          </td>
          <td
            class=""
            colspan="1"
          >
            Ratke
          </td>
          <td
            class=""
            colspan="1"
          >
            nickname
          </td>
          <td
            class=""
            colspan="1"
          >
            Peru
          </td>
          <td
            class=""
            colspan="1"
          >
            Boston
          </td>
          <td
            class="c-pw17pp"
            colspan="1"
          >
            Development Lead
          </td>
        </tr>
        <tr
          class=""
        >
          <td
            class=""
            colspan="1"
          >
            Shaniya
          </td>
          <td
            class=""
            colspan="1"
          >
            Jacobs
          </td>
          <td
            class=""
            colspan="1"
          >
            nickname
          </td>
          <td
            class=""
            colspan="1"
          >
            Peru
          </td>
          <td
            class=""
            colspan="1"
          >
            Chengdu
          </td>
          <td
            class="c-pw17pp"
            colspan="1"
          >
            Developer
          </td>
        </tr>
      </tbody>
      <tfoot>
        <tr />
      </tfoot>
    </table>
  </div>
</div>
`;

exports[`Table[Base] should render correctly about size 1`] = `
<div>
  <div
    class="cw6sirj"
    style="margin-bottom: 24px;"
  >
    <div
      class="c-emivhp"
    >
      <input
        style="display: none;"
        tabindex="0"
        type="radio"
      />
      <span
        class="c-yzux30"
      >
        <span
          class="c-2ldwtt"
          tabindex="1"
        />
      </span>
      <span
        class="c-qgj373"
      >
        small
      </span>
    </div>
    <div
      class="c-emivhp c-wsxxws"
    >
      <input
        checked=""
        style="display: none;"
        tabindex="0"
        type="radio"
      />
      <span
        class="c-yzux30"
      >
        <span
          class="c-2ldwtt"
          tabindex="1"
        />
      </span>
      <span
        class="c-qgj373"
      >
        default
      </span>
    </div>
    <div
      class="c-emivhp"
    >
      <input
        style="display: none;"
        tabindex="0"
        type="radio"
      />
      <span
        class="c-yzux30"
      >
        <span
          class="c-2ldwtt"
          tabindex="1"
        />
      </span>
      <span
        class="c-qgj373"
      >
        large
      </span>
    </div>
  </div>
  <div
    class="c-l8p00w cv4tmwp c-m2vrg2"
  >
    <div
      class="c-67knhe"
    >
      <table>
        <colgroup>
          <col
            style="width: 0px;"
          />
          <col
            style="width: 0px;"
          />
          <col
            style="width: 0px;"
          />
          <col
            style="width: 0px;"
          />
        </colgroup>
        <thead>
          <tr>
            <th
              class=""
              rowspan="1"
            >
              <div
                class=""
              >
                <span>
                  Name
                </span>
              </div>
            </th>
            <th
              class=""
              rowspan="1"
            >
              <div
                class=""
              >
                <span>
                  Country
                </span>
              </div>
            </th>
            <th
              class=""
              rowspan="1"
            >
              <div
                class=""
              >
                <span>
                  Position
                </span>
              </div>
            </th>
            <th
              class="c-pw17pp"
              rowspan="1"
            >
              <div
                class=""
              >
                <span>
                  Office
                </span>
              </div>
            </th>
          </tr>
        </thead>
        <tbody>
          <tr
            class=""
          >
            <td
              class=""
              colspan="1"
            >
              Ephraim Wisozk
            </td>
            <td
              class=""
              colspan="1"
            >
              Reunion
            </td>
            <td
              class=""
              colspan="1"
            >
              Marketing Designer
            </td>
            <td
              class="c-pw17pp"
              colspan="1"
            >
              Miami
            </td>
          </tr>
          <tr
            class=""
          >
            <td
              class=""
              colspan="1"
            >
              Osvaldo Beer
            </td>
            <td
              class=""
              colspan="1"
            >
              Syrian Arab Republic
            </td>
            <td
              class=""
              colspan="1"
            >
              Financial Controller
            </td>
            <td
              class="c-pw17pp"
              colspan="1"
            >
              San Paulo
            </td>
          </tr>
          <tr
            class=""
          >
            <td
              class=""
              colspan="1"
            >
              Dylan Ratke
            </td>
            <td
              class=""
              colspan="1"
            >
              Peru
            </td>
            <td
              class=""
              colspan="1"
            >
              Development Lead
            </td>
            <td
              class="c-pw17pp"
              colspan="1"
            >
              Boston
            </td>
          </tr>
          <tr
            class=""
          >
            <td
              class=""
              colspan="1"
            >
              Shaniya Jacobs
            </td>
            <td
              class=""
              colspan="1"
            >
              Peru
            </td>
            <td
              class=""
              colspan="1"
            >
              Developer
            </td>
            <td
              class="c-pw17pp"
              colspan="1"
            >
              Chengdu
            </td>
          </tr>
        </tbody>
        <tfoot>
          <tr />
        </tfoot>
      </table>
    </div>
  </div>
</div>
`;
